--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
-    "gsap": "^3.13.0",
-    "maath": "^0.10.8",
-    "motion": "^12.23.24",
+    "@emailjs/browser": "^4.4.1",
+    "emailjs": "^4.0.3",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "three": "^0.180.0"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
